--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Finding cookies</string>
+    <string name="menu">Menu</string>
+    <string name="new_game">New Game</string>
+    <string name="options">Options</string>
+    <string name="help">Help</string>
+
 </resources>
