--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,16 @@
 <resources>
-    <string name="app_name">Finding cookies</string>
+    <string name="app_name">Finding Airplane</string>
     <string name="menu">Menu</string>
     <string name="new_game">New Game</string>
     <string name="options">Options</string>
     <string name="help">Help</string>
+    <string name="setting">Setting</string>
+    <string name="_4Times6">4 rows by 6 columns</string>
+    <string name="_5Times10">5 rows by 10 columns</string>
+    <string name="_6Times15">6 rows by 15 columns</string>
+    <string name="board_size">Board Size:</string>
+    <string name="number_of_mines"># Mines:</string>
+    <string name="erase">Erase times played</string>
+    <string name="save">Save</string>
 
 </resources>
