--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="new_game">New Game</string>
     <string name="options">Options</string>
     <string name="help">Help</string>
-
+    <string name="author">Author</string>
+    <string name="author_message">Hi there, I am Angus, the author of this game. I am a year 3 computer science student from SFU, and currently studying <a href="https://opencoursehub.cs.sfu.ca/bfraser/grav-cms/cmpt276/home">CMPT276</a>. Hope you will enjoy this game</string>
+    <string name="how_to_play">How to play?</string>
+    <string name="reference">Reference</string>
 </resources>
